JEDIT 3.2 VERSION HISTORY

* Version 3.2.2

+ New Features

- JHTML syntax highlighting (Will Sargent)

+ Bug Fixes

- 'Welcome' link in help didn't work

* Version 3.2.1

+ New Features

- 'Color Picker' macro added
- Objective-C syntax highlighting (Kris Kopicki)

+ Enhancements

- Updated PV-WAVE edit mode (Ed Stewart)
- Updated 'Write HyperSearch Results' macro (John Gellene)
- Updated jEditLauncher (John Gellene)

+ Bug Fixes

- Clicks in table of contents in help viewer didn't work
- A few actions didn't record a trailing ; when recording a macro
- Fixed another BeanShell performance problem
- Fixed a few minor problems if a plugin threw an exception in its
  start() method (Dirk Moebius)
- MRJ on MacOS 8/9 returns an os.name of "Mac OS", but jEdit was
  checking for "MacOS".
- Fixed minor grab key dialog box bug

+ API Changes

- View.getToolBar() method added
- Status bar change necessary for upcoming Vimulator plugin (Mike Dillon)

* Version 3.2final

+ Enhancements

- Improvements to plugin resource handling, needed by XML plugin 0.4
- Changes to BeanShellAction to improve performance
- jedit.spec file for creating RPM improved (Mike Dillon)
- Documentation changes (John Gellene)
- jEditLauncher updates (John Gellene)

+ Bug Fixes

- Removed debug message from JEditTextArea.java
- 'Go to Previous Bracket' command didn't work

* Version 3.2pre10

+ New Features

- PL-SQL syntax highlighting (Rick Owen)

+ Enhancements

- Documentation updates
- The jedit.spec file for creating the Linux RPM package can now be used
  to compile and build jEdit from scratch
- Improved RPM spec syntax highlighting
- Read-only flag is automatically set when loading files from read-only
  filesystems, like the Archive plugin VFS
- Improved JSP syntax highlighting (Daiji Takamori)
- Nicer looking history text fields (Dirk Moebius)
- C+Home and C+End no longer deactivate selections in multiple selection
  mode

+ Bug Fixes

- C+. and C+, bug fix, again